# qwen3-asr-realtime-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml
demo/: demo_sdk.py  index.html  requirements.txt  server.py
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
src/handlers/: websocket_handler.py
src/models/: asr_manager.py  asr_session.py  vad.py
src/utils/: audio.py  logger.py  protocol.py
tests/: test_sdk_compatibility.py  test_simple_vad.py  test_vad_asr.py  test_vad_mode.py  test_websocket.py
